pics and vid change

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				  <p>A Human curated collection of walls and photos. </p>
 				</div>
 				<div class="box1-demo">
-					<img src="images/Hubs Gopro.png" title="demo" />
+					<img src="images/Hubs Gopro.webm" title="demo" />
 				</div>
 				<div class="clear"> </div>
 			</div>
