--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				  <p>A Human curated collection of walls and photos. </p>
 				</div>
 				<div class="box1-demo">
-					<img src="images/Hubs Gopro.webm" title="demo" />
+					<img src="images/Hubs Gopro.png" title="demo" />
 				</div>
 				<div class="clear"> </div>
+<iframe width="420" height="345"
+src="https://cdn.streamable.com/video/mp4/v26a.mp4">
+</iframe>
+
 			</div>
 		</div>
 		<!---End-boxs---->
