--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<img src="images/Hubs Gopro.png" title="demo" />
 				</div>
 				<div class="clear"> </div>
+</div>
+            </div>
+		</div>
+			<div class="box1">
+				<div class="wrap">
+				<div class="box1-info">
 <iframe width="420" height="345"
 src="https://cdn.streamable.com/video/mp4/v26a.mp4">
 </iframe>
