--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		body {
 	background-color: #536DFE;
 	background-image: url(images/1-mEAdzaVQjKMVVS8y2nVmBw
-%20(1).jpeg);
+%20(1).jpeg)
+;
 }
         body,td,th {
 	font-size: larger;
@@ -27,7 +28,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!----start-wrap---->
 	<div class="wrap">
 		<!---start-header---->
-		<div class="header"><img src="images/click.png" alt=""/>
+		<div class="header">
+		  <p><img src="images/camera couple 2.png" alt="" align="left"/><img src="images/Name Tapanga.png" alt="" width="424" height="371" align="middle"/></p>
 		</div>
 		<!---end-header---->
 	
@@ -38,22 +40,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  <!---End-girds---->
 		<h1><!---start-boxs---->
 	  </h1>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<div class="boxs">
 			<div class="box">
 			  <h3></h3>
 				<div class="box-sites">
 					<div class="box-site">
-						<span class="active"><img src="images/jiklojkl.png" title="slickpic" /></span>
-                        <pre>Choose a image </pre>
-					</div>
+					<span class="active"><img src="images/jiklojkl.png" title="slickpic" /></span>					</div>
 					<div class="box-site">
-						<span><img src="images/jklkjlljkljkl.png" title="slickpic" /></span>
-                        <h2>Upload</h2>
-				  </div>
+				  <span><img src="images/jklkjlljkljkl2.png" title="slickpic" /></span></div>
 					<div class="box-site">
-						<span><img src="images/jkljil.png" title="slickpic" /></span>
-                      <h2>Tag</h2>
-					</div>
+					<span><img src="images/jkljil.png" title="slickpic" /></span></div>
 					<div class="clear"> </div>
 				</div>
 			</div>
@@ -65,10 +76,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="wrap">
 				<div class="box1-info">
 					<h3>Giving privacy without be private.</h3>
-					<p>Tapanga is a simple App were you can share any image using just one Tag. You don´t need complicated passwords or invite individually anyone. Just send the Tag and they will become part of your community.</p>
+					<p>Tapanga is not about following people<br>
+				    It is about collaboration, share and building something together.</p>
+				  <p>Nobody can follow you, see your history or comment in your photos.<br>
+					</p>
 				</div>
 				<div class="box1-demo">
-					<img src="images/moto.png" title="demo" />
+					<img src="images/Mockup Tapapa.png" title="demo" />
 				</div>
 				<div class="clear"> </div>
 			</div>
@@ -77,11 +91,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="box2">
 			<div class="wrap">
 				<div class="box2-demo">
-					<img src="images/tapanga-live-now.png" title="demo" />
+					<img src="images/tapanga combination friends.png" title="demo" />
 				</div>
 				<div class="box2-info">
-					<h3>Location, location, location</h3>
-					<p>Create walls restricted by your location. Share the moment with people around you.</p>
+				  <h3>It is really easy to use</h3>
+					<p><br>
+					  You just need to label your photo with a combination of three elements:<br>
+					  Emoji, a hashtag name and location. It can be all three together, or just one.<br>
+					  The emoji place your photo in a global directory, everyone could see.<br>
+				    The hashtag name will send your photo to a wall, which is hidden from search, only those who know the exact name can see.<br>
+				    The location, only people who are around you will see.</p>
 				</div>
 				<div class="clear"> </div>
 				</div>
@@ -91,11 +110,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="box1">
 				<div class="wrap">
 				<div class="box1-info">
-					<h3>One thing leads to another, everything’s connected</h3>
-				  <p>A Human curated collection of walls and photos. </p>
+					<h3>Everyone wants to create a group of images that express who they are and what they want to be. </h3>
+					<h3>(Mia Fineman) </h3>
 				</div>
 				<div class="box1-demo">
-					<img src="images/Hubs Gopro.png" title="demo" />
+					<img src="images/DIfferent from everything Tapanga.png" title="demo" />
 				</div>
 				<div class="clear"> </div>
 </div>
@@ -103,13 +122,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 			<div class="box1">
 				<div class="wrap">
-				<div class="box1-info">
-<iframe width="420" height="345"
-src="https://cdn.streamable.com/video/mp4/v26a.mp4">
-</iframe>
-
-			</div>
-		</div>
+				<div class="box1-info"></div>
+                <a href="https://invis.io/YE6MV4V4S">
+		<img src="images/1f419.png" alt="" width="120" height="164" align="middle"/>Visit prototype </div>
 		<!---End-boxs---->
 		
 	<!---start-shareicons----->
