Change background color
To orange, change text and the phone.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
 <style type="text/css">
 		body {
-	background-color: #536DFE;
+	background-color: #ff9800;
 	background-image: url(images/1-mEAdzaVQjKMVVS8y2nVmBw
 %20(1).jpeg)
 ;
@@ -29,7 +29,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="wrap">
 		<!---start-header---->
 		<div class="header">
-		  <p><img src="images/camera couple 2.png" alt="" align="left"/><img src="images/Name Tapanga.png" alt="" width="424" height="371" align="middle"/></p>
+		  <p><img src="images/be free to share3.png" alt="" width="387" height="667" align="middle"/></p>
 		</div>
 		<!---end-header---->
 	
@@ -45,21 +45,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
 		<div class="boxs">
-			<div class="box">
-			  <h3></h3>
-				<div class="box-sites">
-					<div class="box-site">
+		  <div class="box">
+			  <div class="box-sites">
+				  <div class="box-site">
 					<span class="active"><img src="images/jiklojkl.png" title="slickpic" /></span>					</div>
 					<div class="box-site">
 				  <span><img src="images/jklkjlljkljkl2.png" title="slickpic" /></span></div>
@@ -91,17 +80,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="box2">
 			<div class="wrap">
 				<div class="box2-demo">
-					<img src="images/tapanga combination friends.png" title="demo" />
+					<img src="images/tapanga combination friends.png" width="186" height="317" title="demo" />
 				</div>
 				<div class="box2-info">
-				  <h3>It is really easy to use</h3>
-					<p><br>
-					  You just need to label your photo with a combination of three elements:<br>
+				  <h3>Express yourself</h3>
+				  <p>Just need to label your photo with a combination of three elements:<br>
 					  Emoji, a hashtag name and location. It can be all three together, or just one.<br>
 					  The emoji place your photo in a global directory, everyone could see.<br>
 				    The hashtag name will send your photo to a wall, which is hidden from search, only those who know the exact name can see.<br>
-				    The location, only people who are around you will see.</p>
-				</div>
+				    And the location is for people who are close to you..</p>
+			  </div>
 				<div class="clear"> </div>
 				</div>
 			</div>
